Updated airbnb blog post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ title: Shop
 <section class="tall grid">
 
   <div class="col-8_sm-12 post-body">
-      <h1> {{page.title}} </h1>
+      <h1 class="dark-text"> {{page.title}} </h1>
       <p class="post-meta">{{page.date | date_to_string }} | Written by {{page.author}}</p>
       <img class="full-width" src="{{page.image_path}}">
 
