--- a/_includes/body-scripts.html
+++ b/_includes/body-scripts.html
@@ -7,6 +7,11 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
 <script src="js/jquery.modal.js"></script>
 <script src="js/jquery.formchimp.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/jquery.gsap.min.js" integrity="sha256-ZaDT0STqd6DBO5vN81j+x7of7z9dBO/cO3bDuaK67TU=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenLite.min.js" integrity="sha256-Y7X151r2Tk9/N3WcxW1qQn/phEPJ9mY8uOxqaI4AWW4=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.js" integrity="sha256-ZPRfl51CApzXw8ydKFJG9+0Gkk5hcLAVDbWtEeaVvss=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js" integrity="sha256-x53M8Q7kf8Tl4NNqrMMhWSfakQ5Gsp3IwlVg18jAjvY=" crossorigin="anonymous"></script>
+
 
 <!-- This is your file with custom javascript or jquery -->
 <script src="/js/main.js"></script>
