--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,7 +43,9 @@
     <link rel="stylesheet" href="/css/jquery.modal.min.css">
 
 
-    <!-- visit http://realfavicongenerator.net to generate favicons for your site and then place them in the /images/favicons folder -->
+    <link rel="icon" type="image/png" href="images/icons/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="images/icons/favicon-16x16.png" sizes="16x16" />
+
 
 
     <!-- CUSTOM STYLESHEETS - This should always be the last stylesheet in your head -->
