--- a/_includes/signup-modal.html
+++ b/_includes/signup-modal.html
@@ -7,6 +7,8 @@
   <input type="text" id="mce-FNAME" name="FNAME"  placeholder="First Name" />
   <input type="text" id="mce-LNAME" placeholder="Last Name"/>
   <input type="email" value="" name="EMAIL" id="mce-EMAIL" placeholder="Email"/>
+  <input type="text" value="" name="EMAIL" id="mce-MMERGE4" placeholder="Website"/>
+
 
 
 <div class="mc-field-group input-group">
@@ -29,7 +31,7 @@
     </div>
     <div class="single-radio-wrap">
       <div class="radio-inner">
-        <input type="radio" value="Brand" name="MMERGE3" id="mce-MMERGE3-3" class="segment-radio"><label for="mce-MMERGE3-3" class="segment-label">Influencer</label>
+        <input type="radio" value="Brand" name="MMERGE3" id="mce-MMERGE3-3" class="segment-radio"><label for="mce-MMERGE3-3" class="segment-label">Blogger</label>
       </div>
     </div>
 
