--- a/_includes/signup-modal.html
+++ b/_includes/signup-modal.html
@@ -7,7 +7,7 @@
   <input type="text" id="mce-FNAME" name="FNAME"  placeholder="First Name" />
   <input type="text" id="mce-LNAME" placeholder="Last Name"/>
   <input type="email" value="" name="EMAIL" id="mce-EMAIL" placeholder="Email"/>
-  <input type="text" value="" name="WEBSITE" id="mce-MMERGE4" placeholder="Website"/>
+  <input type="text" value="" name="EMAIL" id="mce-MMERGE4" placeholder="Website"/>
 
 
 
