--- a/_includes/body-scripts.html
+++ b/_includes/body-scripts.html
@@ -1,7 +1,10 @@
 <!-- These are the scripts that will be placed just before the closing body tag on every page. -->
 
 <!-- jQuery -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> -->
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+
 
 <!--for counter-->
 <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
@@ -13,5 +16,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js" integrity="sha256-x53M8Q7kf8Tl4NNqrMMhWSfakQ5Gsp3IwlVg18jAjvY=" crossorigin="anonymous"></script>
 
 
+
+
 <!-- This is your file with custom javascript or jquery -->
 <script src="/js/main.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/keen-js/3.4.1/keen-query.min.js"></script>
+
+<script src="/js/wp-app/app.js"></script>
