--- a/_includes/body-scripts.html
+++ b/_includes/body-scripts.html
@@ -23,4 +23,4 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/keen-js/3.4.1/keen-query.min.js"></script>
 
-<script src="/js/wp-app/app.js"></script>
+<script src="/js/wt-app/app.js"></script>
