--- a/_includes/body-scripts.html
+++ b/_includes/body-scripts.html
@@ -21,7 +21,7 @@
 <!-- This is your file with custom javascript or jquery -->
 <script src="/js/main.js"></script>
 
-<script src="/js/wt-app/app.js"></script>
+<script src="/js/app.js"></script>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/keen-js/3.4.1/keen-query.min.js"></script>
