--- a/_includes/body-scripts.html
+++ b/_includes/body-scripts.html
@@ -18,7 +18,10 @@
 
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/keen-js/3.4.1/keen-query.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/keen-js/3.4.1/keen-query.min.js"></script> -->
+
+ <script src="https://cdn.jsdelivr.net/keen.js/3.4.1/keen.min.js" type="text/javascript"></script>
+ 
 
 <!-- This is your file with custom javascript or jquery -->
 <script src="/js/main.js"></script>
